@@ -4,7 +4,11 @@
 #
 # $Id$
 
+from logging import getLogger
 from Products.CMFCore.utils import getToolByName
+
+logger = getLogger('CPSExtendedAuth.logout')
+logger.debug("...")
 
 # notify the event service that the user has logged out
 user = context.portal_membership.getAuthenticatedMember()
@@ -18,13 +22,14 @@ REQUEST = context.REQUEST
 if REQUEST.has_key('portal_skin'):
     context.portal_skins.clearSkinCookie()
 
-# remove the session id cookie
+# Expire the user session
+auth_tool = getToolByName(context, 'extended_authentication', None)
+logger.debug("auth_tool = %s" % auth_tool)
+if auth_tool is not None:
+    auth_tool.expireSession(REQUEST)
+
+# Remove the session id cookie
 mgr = REQUEST.SESSION.getBrowserIdManager()
 mgr.flushBrowserIdCookie()
-
-# expire the user session
-uf = getToolByName(context, 'extended_authentication', None)
-if uf is not None:
-    uf.expireSession(REQUEST)
 
 return REQUEST.RESPONSE.redirect(REQUEST.URL1+'/logged_out')
